txt : 로그 주석 수정